--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ repositories {
 dependencies {
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 	implementation "org.jetbrains.kotlin:kotlin-reflect"
+	implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3"
 
 	implementation "no.tornado:tornadofx:1.7.17"
 
