加上版本号，修正图片。

--- a/build.gradle
+++ b/build.gradle
@@ -41,3 +41,6 @@ jar {
 		configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
 	}
 }
+
+version = "2021.1.0"
+group = "cn.jeff.game"
